syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "types.proto";

option go_package = "github.com/AnhBigBrother/enlighten-backend/internal/pb";

service Public {
  rpc GetUserOverview(GetUserOverviewRequest)
      returns (GetUserOverviewResponse) {}
  rpc GetUSerPosts(GetUserPostsRequest) returns (GetUserPostsResponse) {}
  rpc GetAllPosts(GetAllPostsRequest) returns (GetAllPostsResponse) {}
  rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse) {}
  rpc GetPostComments(GetPostCommentsRequest)
      returns (GetPostCommentsResponse) {}
  rpc GetCommentReplies(GetCommentRepliesRequest)
      returns (GetCommentRepliesResponse) {}
}

message GetUserOverviewRequest { string user_id = 1; }
message GetUserOverviewResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string image = 4;
  string bio = 5;
  uint32 total_posts = 6;
  uint32 total_upvote = 7;
  uint32 total_downvote = 8;
  uint32 follower = 9;
  uint32 following = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message GetUserPostsRequest { string user_id = 1; }
message GetUserPostsResponse { repeated PostData posts = 1; }

message GetAllPostsRequest {
  string sort = 1;
  uint32 limit = 2;
  uint32 offset = 3;
}
message GetAllPostsResponse { repeated PostData posts = 1; }

message GetPostByIdRequest { string post_id = 1; }
message GetPostByIdResponse { PostData post = 1; }

message GetPostCommentsRequest {
  string post_id = 1;
  uint32 limit = 2;
  uint32 offset = 3;
}
message GetPostCommentsResponse { repeated CommentData comments = 1; }

message GetCommentRepliesRequest {
  string post_id = 1;
  string comment_id = 2;
  uint32 limit = 3;
  uint32 offset = 4;
}
message GetCommentRepliesResponse { repeated CommentData replies = 1; }